force-app/main/default/objects/DSALES_Clase__c/DSALES_Clase__c.object-meta.xml
<CustomObject>
    <label>Clase</label>
    <nameField>
        <label>Nombre de Clase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>