force-app/main/default/objects/DSALES_Clase__c/fields/DSALES_Departamento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Departamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoría</label>
    <referenceTo>DSALES_Categoria__c</referenceTo>
    <relationshipLabel>Clases</relationshipLabel>
    <relationshipName>Clases</relationshipName>
    <type>Lookup</type>
</CustomField>