force-app/main/default/objects/DSALES_Clase__c/fields/DSALES_SubCategoria__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SubCategoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubCategoría</label>
    <referenceTo>DSALES_SubCategoria__c</referenceTo>
    <relationshipLabel>Clases</relationshipLabel>
    <relationshipName>Clases</relationshipName>
    <type>Lookup</type>
</CustomField>