force-app/main/default/objects/DSALES_Clase__c/fields/DSALES_TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoServicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DSALES_Tipodeproducto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantía Extendida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>